change path to absolute path in yaml test file